# artnet_desktop_consol

./: CMakeLists.txt  TODO
include/: artnet.h  artnet_scanner.h
python_tester/: py_tester.py
src/: artnet_scanner.cpp  main.cpp
